--- a/alura-angular/src/app/components/nova-transferencia/nova-transferencia.component.html
+++ b/alura-angular/src/app/components/nova-transferencia/nova-transferencia.component.html
@@ -13,7 +13,7 @@
 </form>
  -->
 <section class="container">
-
+  <h2 class="titulo">Tranferências</h2>
   <form class="formulario" (ngSubmit)="tranferir()">
     <h2 class="formulario_titulo">Nova Transferência</h2>
 
